2009-09-02  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* reorganization of configuration files


2009-08-31  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* split jet reconsruction & jpt reconstruction (in
	SchieferD/Configuration), adjust *_cfg.py files in test/
	accordingly
 	
2009-08-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix inputtags, ak5->antikt5
	* by default, (1) don't rerun any jet reconstruction and (2) only
	analyze those jets found in the (31X) standard RECO files
	
2009-08-17 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* add configuration for kt/ca with D=0.5/0.7
	* add jet_response_and_resolution_x
	
2009-07-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* tested with 2213 and 310
	* restructured configuration files, use new
	EtaPtMinCandViewRefSelector from JetUtilities
	

2009-05-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* add EtaRsp* as a function of eta AND pT
	* add PhiRsp* as a function of eta AND pT
	* make weighted jet spectrum color schema prettier

2009-05-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* add ability to consider |eta|: if the lowest bound binseta[0]
	is>=0, eta is interpreted as |eta|
	* add eta- and phi- response to JetResponseAnalyzer and
	jet_response_analyzer_x
	* update histogram mode defaults

2009-04-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-05
	* add bin/weighted_spectrum_x and config/weighted_spectrum.config

2009-04-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-04
	* fix jet_response_fitter_x to work correctly with ROOT >5.18
	* allow response comparisons in jet_inspect_jra_histos_x
	* add parameter xsection to jet_response_analyyzer_x: if set >0.0,
	histogram entries will be weighted by xsection/tree->GetEntries()
