@@ -1,8 +1,8 @@
 import FWCore.ParameterSet.Config as cms
 
 
-from JetMETCorrections.Configuration.L2L3Corrections_Summer08Redigi_cff import *
-from SchieferD.Configuration.L2L3Corrections_Summer08_cff import *
+from JetMETCorrections.Configuration.L2L3Corrections_Summer09_cff import *
+from JetMETAnalysis.JetAnalyzers.L2L3Corrections_Extra_cff import *
 
 
 correctStandardCaloJets = cms.Path(L2L3CorJetAK5Calo+
@@ -24,21 +24,21 @@ correctStandardPFJets = cms.Path(L2L3CorJetAK5PF+
 correctExtraCaloJets = cms.Path(L2L3CorJetAK7Calo+
                                 L2L3CorJetKT5Calo+
                                 L2L3CorJetKT7Calo+
-                                L2L3CorJetGK5Calo+
-                                L2L3CorJetGK7Calo+
                                 L2L3CorJetCA4Calo+
                                 L2L3CorJetCA5Calo+
                                 L2L3CorJetCA6Calo+
                                 L2L3CorJetCA7Calo
+                                #L2L3CorJetGK5Calo+
+                                #L2L3CorJetGK7Calo
                                 )
 
 correctExtraPFJets = cms.Path(L2L3CorJetAK7PF+
                               L2L3CorJetKT5PF+
                               L2L3CorJetKT7PF+
-                              L2L3CorJetGK5PF+
-                              L2L3CorJetGK7PF+
                               L2L3CorJetCA4PF+
                               L2L3CorJetCA5PF+
                               L2L3CorJetCA6PF+
                               L2L3CorJetCA7PF
+                              #L2L3CorJetGK5PF+
+                              #L2L3CorJetGK7PF
                               )
